styled:table 'à faire'

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -131,7 +131,7 @@ a {
   border-radius: 0;
   padding: 8px;
   background-color: #0288d1 !important;
-  color: #000;
+  color: #fff;
   opacity: 0.4;
 }
 
