--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,7 @@ a {
 }
 
 .alerted-red {
-  animation: flash-red 2s linear infinite forwards;
+  animation: flash-red 1.4s linear infinite forwards;
 }
 
 .alerted-yellow {
@@ -62,15 +62,18 @@ a {
 
 @keyframes flash-red {
   from {
-    background-color: #dda8a8;
+    /*     transform: scale(1.1); */
     /*     background-color: rgb(0, 243, 0); */
-    opacity: 1;
+    /*  opacity: 1; */
   }
   50% {
-    opacity: 0.5;
+    /*     opacity: 0.5; */
+    /*     background-color: unset; */
   }
+
   to {
-    opacity: 1;
+    background-color: #d0342c;
+    /*     opacity: 1; */
   }
 }
 
