--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,7 @@ a {
 }
 
 .alerted-red {
-  animation: flash-red 1.4s linear infinite forwards;
+  animation: flash-red 1.2s linear infinite forwards;
 }
 
 .alerted-yellow {
@@ -61,19 +61,14 @@ a {
 }
 
 @keyframes flash-red {
-  from {
-    /*     transform: scale(1.1); */
-    /*     background-color: rgb(0, 243, 0); */
-    /*  opacity: 1; */
+  0% {
+    border: 1px solid #d0342c;
   }
   50% {
-    /*     opacity: 0.5; */
-    /*     background-color: unset; */
+    border: 1px solid transparent;
   }
-
-  to {
-    background-color: #d0342c;
-    /*     opacity: 1; */
+  100% {
+    border: 1px solid #d0342c;
   }
 }
 
@@ -101,7 +96,7 @@ a {
 #simple-tabpanel-0 .swiper-pagination,
 #simple-tabpanel-1 .swiper-pagination {
   position: relative !important;
-  padding: 0.3rem 0 !important;
+  padding: 1px 0 !important;
   top: -2px;
 }
 
@@ -112,11 +107,10 @@ a {
   margin-bottom: 20px;
 }
 
-@media (min-width: 3200px) {
-  .swiper-pagination-clickable .swiper-pagination-bullet {
-    width: 16px !important;
-    height: 16px !important;
-  }
+.swiper-pagination-clickable .swiper-pagination-bullet {
+  width: 3px !important;
+  height: 3px !important;
+  margin: 0 2px !important;
 }
 
 #simple-tabpanel-2 .swiper-pagination-bullet {
